# test_RESTFUL

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a83a32f6461_upd_db.py  27c17751c80b_create_db_2.py  97ce86dc2888_stara.py  d88fc3da9030_start.py
app/: __init__.py  alembic.ini  app.py  config.py  crud.py  database.py  db.py  schemas.py  users.py
app/alembic/: env.py
app/alembic/versions/: 05fe951fc35e_upd_db_async.py  3b5490214d29_create_db.py  9a15cb9b4d0b_ading_new_model_posts.py
app/configuration/: server.py
app/configuration/routes/: __init__.py  routes.py
app/core/post/: models.py
app/core/user/: :w  models.py  routes.py
app/internal/routes/: user.py
app/pkg/: database.py  models.py  schemas.py
test/: test.py
test/post/: test_post.py
test/user/: test_user.py
