[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["kohiry <kohiry@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.1"}
httpx = "^0.24.1"
pytest = "^7.4.0"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.7"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.1"}
sqlalchemy = "^2.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
